<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.risun.jg.activity.LoginActivity">

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
      <ImageView
          android:id="@+id/image_jp"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_150"
          android:src="@drawable/img_jg"
          android:scaleType="centerCrop"
          />
      <RelativeLayout
          android:id="@+id/rl_account"
          android:layout_marginTop="@dimen/dp_15"
          android:layout_below="@id/image_jp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/dp_10"
          android:layout_marginRight="@dimen/dp_10"
          >

         <ImageView
             android:id="@+id/image_account"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
             android:src="@drawable/account"
             android:scaleType="centerCrop"
             />

         <EditText
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/image_account"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_alignTop="@id/image_account"
             android:layout_alignBottom="@id/image_account"
             android:background="@null"
             android:hint="@string/login_etname"
             android:gravity="center_vertical"
             />
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
             android:layout_alignBottom="@id/image_account"
             android:background="@color/login_view"/>
      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_pswd"
          android:layout_marginTop="@dimen/dp_15"
          android:layout_below="@id/rl_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/dp_10"
          android:layout_marginRight="@dimen/dp_10"
          >

         <ImageView
             android:id="@+id/image_pswd"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
             android:src="@drawable/password"
             android:scaleType="centerCrop"
             />

         <EditText
             android:id="@+id/et_pswd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/image_pswd"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_alignTop="@id/image_pswd"
             android:layout_alignBottom="@id/image_pswd"
             android:background="@null"
             android:hint="@string/login_etpswd"
             android:gravity="center_vertical"
             />
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
             android:layout_alignBottom="@id/image_pswd"
             android:background="@color/login_view"
             />
      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_ck"
          android:layout_marginTop="@dimen/dp_15"
          android:layout_below="@id/rl_pswd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/dp_10"
          android:layout_marginRight="@dimen/dp_10"
          >
         <CheckBox
             android:id="@+id/remeber_pswd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_remeber_pswd"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_5"
             />
         <Button
             android:id="@+id/button_register"
             android:layout_width="@dimen/dp_120"
             android:layout_height="@dimen/dp_40"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_5"
             android:text="@string/register"
             android:textSize="@dimen/sp_18"
             android:textColor="@color/color_white"
             android:background="@drawable/shape_login_button_register"
             />
      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/rl_ck"
          android:layout_marginLeft="@dimen/dp_10"
          android:layout_marginTop="@dimen/dp_15"
          android:layout_marginRight="@dimen/dp_10"
          >
         <Button
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_45"
             android:text="@string/login"
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp_18"
             android:background="@drawable/selector_login_button_login"
             />
      </RelativeLayout>
   </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
