<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.risun.jg.activity.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/body_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#B2DFEE" >

            <ImageButton
                android:id="@+id/image_message"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_above="@+id/text_mesage"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/message" />

            <TextView
                android:id="@+id/text_mesage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/image_message"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/image_message"
                android:gravity="center_horizontal"
                android:text="@string/text_message" />

            <ImageButton
                android:id="@+id/image_contact"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/image_message"
                android:layout_alignTop="@+id/image_message"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/contact2" />

            <TextView
                android:id="@+id/text_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/image_contact"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/image_contact"
                android:gravity="center_horizontal"
                android:text="@string/text_contact" />

            <ImageButton
                android:id="@+id/image_me"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/image_contact"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/image_contact"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/text_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/image_me"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/image_me"
                android:gravity="center_horizontal"
                android:text="@string/text_me" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
