<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.risun.jg.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_jp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:src="@drawable/img_jg"
            android:scaleType="centerCrop"
            />
        <RelativeLayout
            android:id="@+id/rl_account"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@id/image_jp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            >

            <ImageView
                android:id="@+id/image_account"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/account"
                android:scaleType="centerCrop"
                />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_account"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_alignTop="@id/image_account"
                android:layout_alignBottom="@id/image_account"
                android:background="@null"
                android:hint="@string/refister_etname"
                android:gravity="center_vertical"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignBottom="@id/image_account"
                android:background="@color/login_view"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_pswd"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@id/rl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            >

            <ImageView
                android:id="@+id/image_pswd"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/password"
                android:scaleType="centerCrop"
                />

            <EditText
                android:id="@+id/et_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_pswd"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_alignTop="@id/image_pswd"
                android:layout_alignBottom="@id/image_pswd"
                android:background="@null"
                android:hint="@string/register_etpswd"
                android:gravity="center_vertical"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignBottom="@id/image_pswd"
                android:background="@color/login_view"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_repswd"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@id/rl_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            >

            <ImageView
                android:id="@+id/image_repswd"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/password"
                android:scaleType="centerCrop"
                />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_repswd"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_alignTop="@id/image_repswd"
                android:layout_alignBottom="@id/image_repswd"
                android:background="@null"
                android:hint="@string/register_reetpswd"
                android:gravity="center_vertical"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignBottom="@id/image_repswd"
                android:background="@color/login_view"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_repswd"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            >
            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:text="@string/register"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                android:background="@drawable/selector_login_button_register"
                />
        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
